duicontrolpanel (0.12.12~unreleased) unstable; urgency=low

  [ Sandor Pinter ]
  * Fixes: NB#246239 - Settings application re-opens slowly, if swiped
    to background few times in a row
  * Fixes: NB#243609 - ResetApplet: Missing info icon in header

  [ Robert Manner ]
  * Fixes: NB#241369 - Some brightness indicator is not visible

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 15 Apr 2011 15:00:45 +0200

duicontrolpanel (0.12.11) unstable; urgency=low

  [ Viktor Nagy ]
  * Speed improvements for shorter startup time

  [ Robert Manner ]
  * Fixes: NB#244769 - Stop using .launch suffix

 -- Robert Manner <robert.manner@blumsoft.eu>  Wed, 13 Apr 2011 11:46:42 +0200

duicontrolpanel (0.12.10) unstable; urgency=low

  * Fixes: NB#235703 - COREWEB
  * Fixes: NB#243609 - ResetApplet: Missing info icon in header
  * New: HelpId can be specified for a category, see doc for details
  * Fixes: NB#242796 - com.nokia.DuiControlPanelIf.appletPage does not
    work for declarative applets
  * Fixes: NB#244960 - Events heading is different when opened from
    settings and from events view

 -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 08 Apr 2011 12:47:17 +0200

duicontrolpanel (0.12.9) unstable; urgency=low

  [ Robert Manner ]
  * Fixes: emitting DcpWidget::closePage on first page of the applet
    leads to a window without pages
  * Fixes: DcpWidget::back() can not prevent closing the first page of
    the applet
  * New: example applet for multiple page situation
  * Updates according to the layout guide
  * Support for an additional .desktop file directory under /usr/share
  * Updates the declarative example to have group titles

  [ Sandor Pinter ]
  * Fixes: NB#239966 - Bluetooth icon in settings
  * Fixes: NB#239969 - Device icon in Settings is incorrect

 -- Robert Manner <robert.manner@blumsoft.eu>  Thu, 31 Mar 2011 16:18:41 +0200

duicontrolpanel (0.12.8.1) unstable; urgency=low

  * Fixes: NB#231725 - Help view is shown on relaunching the settings