@@ -28,6 +28,8 @@
 #include "syslog.h"
 #include <QTime>
 
+QLibrary::LoadHints DcpAppletPluginPrivate::defaultLoadHints = 0;
+
 /*!
  * \brief creates an applet from the metadata and loads the plugin
  *
@@ -169,13 +171,7 @@ DcpAppletPlugin::loadPluginFile (const QString &binaryPath)
 
     dcpSyslog ("loading " + binaryPath);
     d_ptr->loader.setFileName (binaryPath);
-
-    // this makes loading a bit longer, but protects controlpanel from crash
-    // in case the plugin has an unresolved symbol which situation cant be
-    // avoided during SSU upgrades
-#if 0
-    d_ptr->loader.setLoadHints(QLibrary::ResolveAllSymbolsHint);
-#endif
+    d_ptr->loader.setLoadHints(DcpAppletPluginPrivate::defaultLoadHints);
 
     if (!d_ptr->loader.load ()) {
         d_ptr->errorMsg = "Loading of the '" + binaryPath + "/" +
@@ -244,4 +240,8 @@ DcpAppletPlugin::interfaceVersion() const
     }
 }
 
+void DcpAppletPlugin::setDefaultLoadHints (int hints)
+{
+    DcpAppletPluginPrivate::defaultLoadHints = (QLibrary::LoadHints) hints;
+}
 
