@@ -7,6 +7,8 @@ duicontrolpanel (0.12.12~unreleased) unstable; urgency=low
 
   [ Robert Manner ]
   * Fixes: NB#241369 - Some brightness indicator is not visible
+  * Fixes: NB#246257 - COREWEB: duicontrolpanel-briefsupplier '_dl_fixup
+    _dl_runtime_resolve
 
  -- Robert Manner <robert.manner@blumsoft.eu>  Fri, 15 Apr 2011 15:00:45 +0200
 
